--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ hyper = "0.14"
 tokio = { version = "1", features = ["full"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_yaml = "0.9"
-tower-http = { version = "0.3", features = ["serve"] }
+tower-http = { version = "0.3", features = ["fs"] }
 git2 = "0.17"
 arc-swap = "1.6"
 prometheus = "0.14"
