updated CI workflow to pass the required GitHub token into the     audit step. In .github/workflows/ci.yml

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,6 +33,8 @@ jobs:
         run: cargo test -- --nocapture
       - name: audit dependencies
         uses: actions-rs/audit-check@v1
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
       - name: build release
         run: cargo build --release
       - name: build Docker image
