corrected the permission keys – GitHub expects security_events     (underscore) rather than security-events – and added checks: write so the     action can create check runs.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,7 +11,8 @@ jobs:
     # Grant the GITHUB_TOKEN permission to report security events (required by audit-check)
     permissions:
       contents: read
-      security-events: write
+      security_events: write
+      checks: write
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
