--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,7 +11,7 @@ jobs:
     # Grant the GITHUB_TOKEN permission to report security events (required by audit-check)
     permissions:
       contents: read
-      security_events: write
+      security-events: write
       checks: write
     runs-on: ubuntu-latest
     steps:
