--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ tokio = { version = "1", features = ["full"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_yaml = "0.9"
 tower-http = { version = "0.3", features = ["fs"] }
+mime_guess = "2.0"
 arc-swap = "1.6"
 prometheus = "0.14"
 tracing = "0.1"
