--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,12 +9,12 @@ axum = "0.6"
 hyper = "0.14"
 tokio = { version = "1", features = ["full"] }
 serde = { version = "1.0", features = ["derive"] }
-serde_yaml = "0.9"
-tower-http = { version = "0.3", features = ["fs"] }
+# serde_yaml = "0.9"  # unused: manual YAML parsing
+# tower-http = { version = "0.3", features = ["fs"] }  # unused: manual fs handler
 mime_guess = "2.0"
 arc-swap = "1.6"
 prometheus = "0.14"
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["fmt", "json", "env-filter"] }
-thiserror = "1.0"
+# thiserror = "1.0"  # unused: generic Box<Error>
 toml = "0.7"
