resolving CI issue that wound up being mismatched URL between links.yml sample, real links.yaml from my private repo, and the smoke test in CI

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -66,6 +66,6 @@ jobs:
           status=$(curl -s -o /dev/null -w "%{http_code}" -I http://localhost:8080/foo)
           if [ "$status" != "302" ]; then echo "expected 302 for /foo, got $status"; exit 1; fi
           location=$(curl -s -D - http://localhost:8080/foo | grep Location | awk '{print $2}')
-          if [ "$location" != "https://example.com/foo" ]; then echo "location mismatch: $location"; exit 1; fi
+          if [ "$location" != "https://example.com/" ]; then echo "location mismatch: $location"; exit 1; fi
       - name: stop redirective container
         run: docker stop redirective_test
