--- a/links.yaml
+++ b/links.yaml
@@ -1,3 +1,3 @@
  # links.yaml - mapping of short codes to full URLs
- foo: https://example.com/foo | optional comments per line, space-pipe-space as delimiter
- bar: https://example.com/bar
+ foo: https://example.com/ | optional comments per line, space-pipe-space as delimiter
+ bar: https://example.com/
