--- a/.gitignore
+++ b/.gitignore
@@ -1,40 +1,2 @@
-# Rust build directory
-/target/
-**/*.rs.bk
-
-# Binaries
-*.exe
-*.dll
-*.so
-*.dylib
-
-# IDEs and editors
-.vscode/
-.idea/
-*.sw?
-*.sublime-workspace
-*.sublime-project
-
-# OS metadata
-.DS_Store
-Thumbs.db
-
-# Temporary files
-/tmp/
-*.log
-*.tmp
-*.bak
-
-# Cargo specific
-/.cargo/
-
-# Node.js projects (if any scripting)
-/node_modules/
-
-# Backup files
-*~
-
-# Downloaded
-/scripts/redirective-links/
-/static_html/shortcodes.txt
-redirective-links/
+links_sync_deploy
+links_sync_deploy.pub
